se ha añadido un estilo a la pagina mediante style.css

--- a/index.html
+++ b/index.html
@@ -3,13 +3,21 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">
   <title>DOM</title>
 </head>
 <body>
-  <h1>Lista de Elementos</h1>
-    <ul id="lista"></ul>
-    <button id="agregar">Agregar Elemento</button>
-
+  <header class="header-top">
+    <h1>Lista de la compra</h1>
+  </header>
+  <section class="container">
+    <div class="list">
+      <ul id="lista"></ul>
+    </div>
+    <div class="btn">
+      <button id="agregar">Añadir</button>
+    </div>
+  </section>
     <script src="./js/script.js"></script>
 </body>
 </html>
